@@ -6,6 +6,11 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
+AP-2009-10-13-0: Bugfix:     issue 3129 failed for berkeleydb spooling.
+                 Belongs to: JG-2009-10-05-0
+                 Bugfix:     set_config - adding configuration from the file.
+                 Review:     LP
+
 CR-2009-10-12-2: Cleanup:    o changed logging order for resolve_arch error 
                                output
                  Review:     EB
